Upgrade java, upgrade spring-boot, add more tests (#143)
## Summary

- Routine Change

### Details
- upgrade java to eclipse-temurin:21.0.2_13-jdk
- use new tool to check for licenses to allow libraries with no license
information
- in the docker container use jlink to create a jre rather than a full
java image
- add Makefile targets and docker-compose file to run docker container
- increase memory size used by java in the container
- Updates spring boot to version 3.2.4
- adds examples for testing validator

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>